--- a/index.html
+++ b/index.html
@@ -4,15 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="my-cards.js"></script>
-    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
-    <div
-      style="display: flex; align-items: center; height: 95vh; overflow-x: auto"
-    >
-      <my-cards></my-cards>
-    </div>
+    <my-cards></my-cards>
   </body>
 </html>
 <style>
@@ -26,18 +21,7 @@
   }
 
   p {
-    #card {
-      min-width: 25vw;
-      max-width: 50vw;
-      border-radius: 10px;
-      padding: 20px;
-      margin: 20px;
-    }
-
-    p {
-      font-size: 0.75em;
-    }
-    font-size: 25em;
+    font-size: 2500px;
   }
 </style>
 <script type="text/javascript">
@@ -45,7 +29,89 @@
     cards: [
       {
         title: "Card 1",
-        "background-color": "blue",
+        styles: "background-color: blue; color: white",
+        text: `Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque suscipit
+      quaerat quam assumenda cumque voluptatibus inventore veniam recusandae
+      repudiandae perspiciatis, vitae maxime labore! Ab ad animi fugiat
+      praesentium maiores? Neque doloribus amet accusantium, non, inventore
+      quaerat hic, dignissimos consequatur velit recusandae rem officiis in
+      ipsam modi et eligendi cum ex impedit? Minima enim neque quisquam
+      molestias. Explicabo temporibus dignissimos quas odit officia fuga
+      similique, tenetur placeat nobis ut delectus consequatur asperiores
+      laborum voluptatibus inventore veniam natus in culpa sunt optio!`,
+      },
+
+      {
+        title: "Card 2",
+        styles: "background-color: #5f5f5f; color: white",
+        text: `Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque suscipit
+      quaerat quam assumenda cumque voluptatibus inventore veniam recusandae
+      repudiandae perspiciatis, vitae maxime labore! Ab ad animi fugiat
+      praesentium maiores? Neque doloribus amet accusantium, non, inventore
+      quaerat hic, dignissimos consequatur velit recusandae rem officiis in
+      ipsam modi et eligendi cum ex impedit? Minima enim neque quisquam
+      molestias. Explicabo temporibus dignissimos quas odit officia fuga
+      similique, tenetur placeat nobis ut delectus consequatur asperiores
+      laborum voluptatibus inventore veniam natus in culpa sunt optio!`,
+      },
+
+      {
+        title: "Card 3",
+        styles: "background-color: lightgreen; color: black",
+        text: `Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque suscipit
+      quaerat quam assumenda cumque voluptatibus inventore veniam recusandae
+      repudiandae perspiciatis, vitae maxime labore! Ab ad animi fugiat
+      praesentium maiores? Neque doloribus amet accusantium, non, inventore
+      quaerat hic, dignissimos consequatur velit recusandae rem officiis in
+      ipsam modi et eligendi cum ex impedit? Minima enim neque quisquam
+      molestias. Explicabo temporibus dignissimos quas odit officia fuga
+      similique, tenetur placeat nobis ut delectus consequatur asperiores
+      laborum voluptatibus inventore veniam natus in culpa sunt optio!`,
+      },
+      {
+        title: "Card 4",
+        styles: "background-color: purple; color: white",
+        text: `Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque suscipit
+      quaerat quam assumenda cumque voluptatibus inventore veniam recusandae
+      repudiandae perspiciatis, vitae maxime labore! Ab ad animi fugiat
+      praesentium maiores? Neque doloribus amet accusantium, non, inventore
+      quaerat hic, dignissimos consequatur velit recusandae rem officiis in
+      ipsam modi et eligendi cum ex impedit? Minima enim neque quisquam
+      molestias. Explicabo temporibus dignissimos quas odit officia fuga
+      similique, tenetur placeat nobis ut delectus consequatur asperiores
+      laborum voluptatibus inventore veniam natus in culpa sunt optio!`,
+      },
+      {
+        title: "Card 5",
+        styles: "background-color: red; color: white",
+        text: `Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque suscipit
+      quaerat quam assumenda cumque voluptatibus inventore veniam recusandae
+      repudiandae perspiciatis, vitae maxime labore! Ab ad animi fugiat
+      praesentium maiores? Neque doloribus amet accusantium, non, inventore
+      quaerat hic, dignissimos consequatur velit recusandae rem officiis in
+      ipsam modi et eligendi cum ex impedit? Minima enim neque quisquam
+      molestias. Explicabo temporibus dignissimos quas odit officia fuga
+      similique, tenetur placeat nobis ut delectus consequatur asperiores
+      laborum voluptatibus inventore veniam natus in culpa sunt optio!`,
+      },
+      {
+        title: "Card 6",
+        styles:
+          "background-color: #e4e4e4; color: black; border-radius: 250px; font-size: 12px",
+        text: `Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque suscipit
+      quaerat quam assumenda cumque voluptatibus inventore veniam recusandae
+      repudiandae perspiciatis, vitae maxime labore! Ab ad animi fugiat
+      praesentium maiores? Neque doloribus amet accusantium, non, inventore
+      quaerat hic, dignissimos consequatur velit recusandae rem officiis in
+      ipsam modi et eligendi cum ex impedit? Minima enim neque quisquam
+      molestias. Explicabo temporibus dignissimos quas odit officia fuga
+      similique, tenetur placeat nobis ut delectus consequatur asperiores
+      laborum voluptatibus inventore veniam natus in culpa sunt optio!`,
+      },
+      {
+        title: "Card 7",
+        styles:
+          "background-color: yellow; color: black; margin: 0 500px; font-size: 25px",
         text: `Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque suscipit
       quaerat quam assumenda cumque voluptatibus inventore veniam recusandae
       repudiandae perspiciatis, vitae maxime labore! Ab ad animi fugiat
