removed unique styles set on last 2 cards

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </html>
 <style>
   /* to demonstrate DOM and Shadow DOM styles do not interfere with one another */
-  #card {
+  /* #card {
     min-width: 1000vw;
     max-width: 100000000vw;
     border-radius: 10000000px;
@@ -22,7 +22,7 @@
 
   p {
     font-size: 2500px;
-  }
+  } */
 </style>
 <script type="text/javascript">
   document.querySelector("my-cards").init({
@@ -96,8 +96,7 @@
       },
       {
         title: "Card 6",
-        styles:
-          "background-color: #e4e4e4; color: black; border-radius: 250px; font-size: 12px",
+        styles: "background-color: #e4e4e4; color: black;",
         text: `Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque suscipit
       quaerat quam assumenda cumque voluptatibus inventore veniam recusandae
       repudiandae perspiciatis, vitae maxime labore! Ab ad animi fugiat
@@ -110,8 +109,7 @@
       },
       {
         title: "Card 7",
-        styles:
-          "background-color: yellow; color: black; margin: 0 500px; font-size: 25px",
+        styles: "background-color: yellow; color: black; ",
         text: `Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque suscipit
       quaerat quam assumenda cumque voluptatibus inventore veniam recusandae
       repudiandae perspiciatis, vitae maxime labore! Ab ad animi fugiat
