uncommented internal styles from html file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </html>
 <style>
   /* to demonstrate DOM and Shadow DOM styles do not interfere with one another */
-  /* #card {
+  #card {
     min-width: 1000vw;
     max-width: 100000000vw;
     border-radius: 10000000px;
@@ -22,7 +22,7 @@
 
   p {
     font-size: 2500px;
-  } */
+  }
 </style>
 <script type="text/javascript">
   document.querySelector("my-cards").init({
